--- a/source/_posts/运维中的一些常见命令.md
+++ b/source/_posts/运维中的一些常见命令.md
@@ -88,6 +88,18 @@ find  .  -name  '*.pyc'  -type  f  -print  -exec  rm  -rf  {} \;
 pt-online-schema-change --execute -h 127.0.0.1 -u root --ask-pass --alter="add column status tinyint(4) after id" D=test_db,t=test_table
 ```
 
+给用户加组，常见的是加docker组
+
+```
+usermod -a -G docker cnzhx
+```
+
+找出大文件夹
+
+```
+du -h --max-depth=1 /
+```
+
 - - -
 
 以后慢慢补充
